# storm-app

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2023-07-12-175821_create_sessions/: up.sql
migrations/2023-07-12-175825_create_discussions/: down.sql  up.sql
migrations/2023-07-12-182006_create_session_discussions/: down.sql  up.sql
src/: lib.rs
src/models/: discussion.rs  mod.rs  session.rs  session_discussions.rs
