[package]
name = "storm-app"
version = "0.1.0"
authors = ["remi-boivin <remi.boivin@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenvy = "0.15"
diesel = { version = "2.1.0", features = ["postgres"] }
